--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "mysql2": "^3.1.2",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
