--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -6,7 +6,7 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "test": {
+  "staging": {
     "username": "root",
     "password": null,
     "database": "database_test",
