--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0"
   }
